--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,39 @@
-.App {
+#root{
+  max-width: 64rem;
+  margin: 0 auto;
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.navbar{
   display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+  flex-direction: row;
+  justify-content: space-around;
+  border: 1px solid;
+  padding: 1rem;
+}
+
+.btn{
+  margin: 0 1rem;
+  padding: 0.5rem;
+  background-color: aqua;
+  text-decoration: none;
+}
+
+.selected{
+  background-color: blueviolet;
   color: white;
+  border-radius: 0.5rem;
 }
 
-.App-link {
-  color: #61dafb;
+.scenario{
+  width: 100%;
+  height: 20rem;
+  border: 1px solid red;
+  margin-top: 2rem;
+  box-sizing: border-box;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
-}
+.modalClass {  
+  text-align: center;  
+  margin-top: 100px;  
+} 
